--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,8 @@
     "zod": "^3.23.5"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
