--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,11 @@ services:
   postgres:
     image: postgres:16.2
     environment:
-      POSTGRES_DB: cims
-      POSTGRES_USER: postgresuser
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "3690:3690"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
@@ -22,7 +22,7 @@ services:
     ports:
       - "3692:3692"
     environment:
-      - DATABASE_URL=postgres://postgresuser:password@postgres:5432/cims
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:5432/${POSTGRES_DB}
     depends_on:
       - postgres
 
