Update gitignore and .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# Database
 POSTGRES_DB=cims
 POSTGRES_USER=postgresuser
 POSTGRES_PASSWORD=password
 POSTGRES_PORT=3690
-DATABASE_HOST=postgres
+DATABASE_HOST=localhost
+
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
