--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,40 +1,46 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:16.2
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "${POSTGRES_PORT}:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
+  # postgres:
+  #   image: postgres:16.2
+  #   environment:
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #   ports:
+  #     - "${POSTGRES_PORT}:5432"
+  #   volumes:
+  #     - postgres-data:/var/lib/postgresql/data
 
-  nextjs:
+  web:
     build:
       context: ./web
       dockerfile: Dockerfile
+    container_name: web
+    restart: always
     volumes:
       - .:/app
-      - /app/node_modules
+      # - /app/src
+      # - /app/node_modules
+      # - /app/.next
     ports:
       - "3692:3692"
     environment:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:5432/${POSTGRES_DB}
-    depends_on:
-      - postgres
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+    # depends_on:
+    #   - postgres
 
-  localstack:
-    image: localstack/localstack
-    environment:
-      SERVICES: sqs
-      DEFAULT_REGION: us-west-1
-      EDGE_PORT: 4566
-    ports:
-      - "4566:4566"
-      - "4571:4571" # Legacy port for SQS
+  # localstack:
+  #   image: localstack/localstack
+  #   environment:
+  #     SERVICES: sqs
+  #     DEFAULT_REGION: us-west-1
+  #     EDGE_PORT: 4566
+  #   ports:
+  #     - "4566:4566"
+  #     - "4571:4571" # Legacy port for SQS
 
-volumes:
-  postgres-data:
+# volumes:
+#   postgres-data:
