--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
-    "@prisma/client": "^5.13.0",
     "install": "^0.13.0",
     "next": "^14.2.2",
     "react": "^18.2.0",
@@ -21,7 +20,7 @@
     "zod": "^3.23.5"
   },
   "scripts": {
-    "dev": "WATCHPACK_POLLING=true next dev",
+    "dev": "PORT=3692 next dev",
     "build": "next build",
     "start": "next start"
   }
