--- a/database/package.json
+++ b/database/package.json
@@ -12,7 +12,7 @@
     "pg": "^8.11.5"
   },
   "scripts": {
-    "migrate-latest": "NODE_OPTIONS='--loader ts-node/esm' dotenv ../.env -- knex migrate:latest --knexfile ./src/knexfile.ts",
+    "migrate-latest": "NODE_OPTIONS='--loader ts-node/esm' dotenv -e ../.env -- knex migrate:latest --knexfile ./src/knexfile.ts",
     "migrate-rollback": "knex migrate:rollback --knexfile ./src/knexfile.ts",
     "seed": "knex seed:run --knexfile ./src/knexfile.ts"
   }
