--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,10 @@
   "module": "index.ts",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/knex": "^0.16.1",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18.2.79",
+    "dotenv-cli": "^7.4.1",
     "sass": "^1.75.0"
   },
   "peerDependencies": {
@@ -14,13 +17,15 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
     "install": "^0.13.0",
+    "knex": "^3.1.0",
     "next": "^14.2.2",
+    "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.5"
   },
   "scripts": {
-    "dev": "PORT=3692 next dev",
+    "dev": "PORT=3692 dotenv -e ../.env -- next dev",
     "build": "next build",
     "start": "next start"
   }
