--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "dayjs": "^1.11.11",
     "install": "^0.13.0",
     "knex": "^3.1.0",
     "next": "^14.2.2",
