--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,18 @@ POSTGRES_DB=cims
 POSTGRES_USER=postgresuser
 POSTGRES_PASSWORD=password
 POSTGRES_PORT=3690
-DATABASE_HOST=localhost
+POSTGRES_DATABASE_HOST=localhost
 
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+# Database URL
+POSTGRES_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DATABASE_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# AWS
+AWS_SQS_REGION=us-east-1
+AWS_SQS_ENDPOINT=http://localhost:4566
+AWS_REPO_SCAN_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/RepoScanQueue
+
+# Next.js
+NEXT_PORT=3692
+
+# Next.js Public Environment
+NEXT_PUBLIC_API_HOST=http://localhost:${NEXT_PORT}/api
