--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "aws-sdk": "^2.1615.0",
     "dayjs": "^1.11.11",
     "install": "^0.13.0",
     "knex": "^3.1.0",
