--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -25,7 +25,7 @@
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    // "verbatimModuleSyntax": true,
     "noEmit": true,
     // Best practices
     "strict": true,
