--- a/database/package.json
+++ b/database/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "migrate-latest": "NODE_OPTIONS='--loader ts-node/esm' dotenv -e ../.env -- knex migrate:latest --knexfile ./src/knexfile.ts",
-    "migrate-rollback": "knex migrate:rollback --knexfile ./src/knexfile.ts",
+    "migrate-rollback": "NODE_OPTIONS='--loader ts-node/esm' dotenv -e ../.env -- knex migrate:rollback --knexfile ./src/knexfile.ts",
     "seed": "knex seed:run --knexfile ./src/knexfile.ts"
   }
 }
