Installed and configured NextAuth for GitHub sign-in

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -16,6 +16,10 @@
     ]
   },
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     // Enable latest features
     "lib": [
       "ESNext"
