--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "install": "^0.13.0",
     "knex": "^3.1.0",
     "next": "^14.2.2",
+    "next-auth": "beta",
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
