--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.1.0",
     "@aws-sdk/client-sqs": "^3.577.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -22,7 +23,7 @@
     "install": "^0.13.0",
     "knex": "^3.1.0",
     "next": "^14.2.2",
-    "next-auth": "beta",
+    "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
