Fixed various build errors

--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "dev": "PORT=3692 dotenv -e ../.env -- next dev",
-    "build": "next build",
+    "build": "dotenv -e ../.env -- next build",
     "start": "next start"
   }
 }
