--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,17 @@ POSTGRES_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRE
 
 # AWS
 AWS_SQS_REGION=us-east-1
+AWS_SQS_USER_ACCESS_KEY=
+AWS_SQS_USER_SECRET_KEY=
 AWS_SQS_ENDPOINT=http://localhost:4566
 AWS_REPO_SCAN_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/RepoScanQueue
 
 # Next.js
 NEXT_PORT=3692
+AUTH_SECRET=
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
 
-# Next.js Public Environment
-NEXT_PUBLIC_API_HOST=http://localhost:${NEXT_PORT}/api
+# Python
+PYTHON_UPLOAD_API_ENDPOINT='localhost:3692'
+PYTHON_LOCAL_DESTINATION_FOLDER='/tmp/.stacksight/
