--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "install": "^0.13.0",
     "knex": "^3.1.0",
