--- a/web/package.json
+++ b/web/package.json
@@ -2,12 +2,17 @@
   "name": "stacksight",
   "module": "index.ts",
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/bun": "latest",
     "@types/knex": "^0.16.1",
     "@types/pg": "^8.11.6",
     "@types/react": "^18.2.79",
     "dotenv-cli": "^7.4.1",
-    "sass": "^1.75.0"
+    "eslint": "8.x",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.3.0",
+    "sass": "^1.75.0",
+    "typescript-eslint": "^7.11.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -33,6 +38,7 @@
   "scripts": {
     "dev": "PORT=3692 dotenv -e ../.env -- next dev",
     "build": "dotenv -e ../.env -- next build",
-    "start": "PORT=3692 next start"
+    "start": "PORT=3692 next start",
+    "lint": "eslint src/"
   }
 }
