--- a/web/package.json
+++ b/web/package.json
@@ -21,11 +21,14 @@
     "@mui/material": "^5.15.16",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "drizzle-kit": "^0.23.0",
+    "drizzle-orm": "^0.32.0",
     "install": "^0.13.0",
     "knex": "^3.1.0",
     "next": "^14.2.2",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.5"
