--- a/web/package.json
+++ b/web/package.json
@@ -17,14 +17,15 @@
     "@aws-sdk/client-sqs": "^3.577.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
-    "install": "^0.13.0",
-    "knex": "^3.1.0",
+    "drizzle-kit": "^0.24.0",
+    "drizzle-orm": "^0.33.0",
+    "lucia": "^3.2.0",
     "next": "^14.2.2",
-    "next-auth": "^5.0.0-beta.18",
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
