--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -22,7 +22,7 @@
     },
     // Enable latest features
     "lib": [
-      "ESNext"
+      "ESNext", "DOM"
     ],
     "target": "ESNext",
     "module": "ESNext",
