--- a/web/package.json
+++ b/web/package.json
@@ -3,17 +3,12 @@
   "module": "index.ts",
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/knex": "^0.16.1",
     "@types/pg": "^8.11.6",
-    "@types/react": "^18.2.79",
     "dotenv-cli": "^7.4.1",
-    "sass": "^1.75.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "sass": "^1.75.0",
+    "typescript": "5.5.4"
   },
   "dependencies": {
-    "@auth/pg-adapter": "^1.1.0",
     "@aws-sdk/client-sqs": "^3.637.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -28,8 +23,6 @@
     "next": "^14.2.2",
     "npm": "^10.8.2",
     "pg": "^8.11.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "zod": "^3.23.5"
   },
   "scripts": {
