--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.637.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
@@ -20,7 +20,7 @@
     "drizzle-kit": "^0.24.0",
     "drizzle-orm": "^0.33.0",
     "lucia": "^3.2.0",
-    "next": "^14.2.2",
+    "next": "latest",
     "npm": "^10.8.2",
     "pg": "^8.11.5",
     "zod": "^3.23.5"
