STAC-38: Installed typescript; Created typescript lambda function; Update env var names

--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,5 @@ AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
 
 # Python
-PYTHON_UPLOAD_API_HOST='localhost:3692'
-PYTHON_LOCAL_DESTINATION_FOLDER='/tmp/.stacksight/
+PROCESSING_UPLOAD_API_HOST='localhost:3692'
+PROCESSING_LOCAL_DESTINATION_FOLDER='/tmp/.stacksight/
