--- a/stack/package.json
+++ b/stack/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "crawl": "tsx src/Crawler.ts"
+    "crawl": "tsx src/Crawler.ts",
+    "clone": "tsx src/Archive.ts",
+    "build": "tsc",
+    "test": "tsx src/test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/adm-zip": "^0.5.5",
     "@types/node": "^20.16.2",
     "tsx": "^4.19.0"
+  },
+  "dependencies": {
+    "adm-zip": "^0.5.15",
+    "typescript": "^5.5.4"
   }
 }
