--- a/stack/tsconfig.json
+++ b/stack/tsconfig.json
@@ -1,20 +1,20 @@
 {
-    "compilerOptions": {
-      "target": "ESNext",                               
-      "module": "ESNext",                               
-      "lib": ["ESNext", "DOM"],                        
-      "allowJs": true,                                 
-      "skipLibCheck": true,                             
-      "esModuleInterop": true,                          
-      "forceConsistentCasingInFileNames": true,        
-      "strict": true,                                   
-      "moduleResolution": "node",                      
-      "resolveJsonModule": true,                        
-      "isolatedModules": true,                         
-      "noEmit": true,                                  
-      "jsx": "react-jsx"                               
-    },
-    "include": ["src"],
-    "exclude": ["node_modules"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": "./",
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "noImplicitAny": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
+  },
+  "include": ["src/lambda_function.ts"],
+  "exclude": ["node_modules", "dist"]
+}
